SigmaCodebackup3rdSep/objects/Manufacturing_Products__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Run__c</fullName>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipLabel>Manufacturing Products</relationshipLabel>
        <relationshipName>Manufacturing_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Modified_Quantity__c</fullName>
        <label>Modified Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procedure_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Manufacturing Products</relationshipLabel>
        <relationshipName>Manufacturing_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_of_measure__c</fullName>
        <label>Unit of measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit_of_Measure</valueSetName>
        </valueSet>
    </fields>
    <label>Manufacturing Products</label>
    <nameField>
        <displayFormat>Rec-{0000}</displayFormat>
        <label>Manufacturing Products No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturing Products</pluralLabel>
    <recordTypes>
        <fullName>Additional_Products</fullName>
        <active>true</active>
        <label>Additional Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>Packaging_Materials</fullName>
        <active>true</active>
        <label>Packaging Materials</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Components</fullName>
        <active>true</active>
        <label>Product Components</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stages</fullName>
        <active>true</active>
        <label>Stages</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>